--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "watch": "webpack --watch"
+    "start": "webpack serve --mode=development --content-base src/"
   },
   "dependencies": {
     "angular": "^1.8.2",
