--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "angular-route": "^1.8.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@types/angular": "^1.8.0",
